# graph_solver_framework

./: .gitignore  .gitmodules  README.md  _bootstrap.py  compile_cpp.sh  main.py  pyproject.toml  test.py  test2.py  test3.py  work.py
config/: dimacs_config.yaml  test_config.yaml
feature_extractors/: GlobalMetrics.py  LocalMetrics.py  MachineLearningFeatures.py  __init__.py
framework/core/: base_feature_extractor.py  base_loader.py  base_solver.py  constants.py  dataset_creator.py  factories.py  feature_extractor.py  graph.py  graph_creator.py  graph_problem.py  registries.py  solution.py  solver.py
framework/dataset/: MemoryDataset.py  SQLiteDataset.py
framework/dataset_creators/: BarabasiAlbertGenerator.py  DIMACStoMISLoader.py  SATtoMISLoader.py  TestCreator.py  __init__.py  test_creator.py
framework/experiment/: analyzer.py  config.py  entities.py  manager.py  utils.py
framework/feature_extractors/: GlobalMetrics.py  LocalMetrics.py  MachineLearningFeatures.py  TestExtractor.py  __init__.py  test_extractor.py
framework/graph_creators/: BarabasiAlbertGenerator.py  BarbellGenerator.py  BipartiteGenerator.py  DIMACStoMISLoader.py  RandomRegularGenerator.py  SATtoMISLoader.py  StarGenerator.py  TestCreator.py  (+2 more)
graph_creators/: BarabasiAlbertGenerator.py  BarbellGenerator.py  BipartiteGenerator.py  CompleteGraphGenerator.py  DIMACStoMISLoader.py  ErdosRenyiGenerator.py  LollipopGenerator.py  RandomGeometricGenerator.py  RandomRegularGenerator.py  SATtoMISLoader.py  SBMGenerator.py  StarGenerator.py  WattsStrogatz.py  __init__.py
problems/: __init__.py
(+45 files in other folders)
